@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2023 IBM Corporation and others.
+ * Copyright (c) 2009, 2026 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -14,16 +14,17 @@
 
 package org.eclipse.ui.tests.browser.internal;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import org.eclipse.ui.browser.IWorkbenchBrowserSupport;
 import org.eclipse.ui.internal.browser.WebBrowserEditorInput;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 public class TestInput {
 
@@ -33,73 +34,60 @@ public class TestInput {
 	private static final String ID2 = "browser.id2";
 
 	@Test
-	public void testCompareWithNull() throws MalformedURLException {
-		WebBrowserEditorInput input = new WebBrowserEditorInput(new URL(URL1),
-				0, ID1);
+	public void testCompareWithNull() throws MalformedURLException, URISyntaxException {
+		WebBrowserEditorInput input = new WebBrowserEditorInput(new URI(URL1).toURL(), 0, ID1);
 		assertNotNull(input);
 	}
 
 	@Test
-	public void testCompareWithNullURL() throws MalformedURLException {
-		WebBrowserEditorInput input = new WebBrowserEditorInput(new URL(URL1),
-				0, ID1);
-		WebBrowserEditorInput input2 = new WebBrowserEditorInput(null,
-				0, ID1);
+	public void testCompareWithNullURL() throws MalformedURLException, URISyntaxException {
+		WebBrowserEditorInput input = new WebBrowserEditorInput(new URI(URL1).toURL(), 0, ID1);
+		WebBrowserEditorInput input2 = new WebBrowserEditorInput(null, 0, ID1);
 		assertNotEquals(input, input2);
 		assertNotEquals(input2, input);
 	}
 
 	@Test
-	public void testCompareWithSelf() throws MalformedURLException {
-		WebBrowserEditorInput input = new WebBrowserEditorInput(new URL(URL1),
-				0, ID1);
+	public void testCompareWithSelf() throws MalformedURLException, URISyntaxException {
+		WebBrowserEditorInput input = new WebBrowserEditorInput(new URI(URL1).toURL(), 0, ID1);
 		assertEquals(input, input);
 	}
 
 	@Test
-	public void testCompareWithSimilar() throws MalformedURLException {
-		WebBrowserEditorInput input = new WebBrowserEditorInput(new URL(URL1),
-				0, ID1);
-		WebBrowserEditorInput input2 = new WebBrowserEditorInput(new URL(URL1),
-						0, ID1);
+	public void testCompareWithSimilar() throws MalformedURLException, URISyntaxException {
+		WebBrowserEditorInput input = new WebBrowserEditorInput(new URI(URL1).toURL(), 0, ID1);
+		WebBrowserEditorInput input2 = new WebBrowserEditorInput(new URI(URL1).toURL(), 0, ID1);
 		assertEquals(input, input2);
 		assertEquals(input.hashCode(), input2.hashCode());
 	}
 
 	@Test
-	public void testCompareWithDifferentUrl() throws MalformedURLException {
-		WebBrowserEditorInput input = new WebBrowserEditorInput(new URL(URL1),
-				0, ID1);
-		WebBrowserEditorInput input2 = new WebBrowserEditorInput(new URL(URL2),
-						0, ID1);
+	public void testCompareWithDifferentUrl() throws MalformedURLException, URISyntaxException {
+		WebBrowserEditorInput input = new WebBrowserEditorInput(new URI(URL1).toURL(), 0, ID1);
+		WebBrowserEditorInput input2 = new WebBrowserEditorInput(new URI(URL2).toURL(), 0, ID1);
 		assertNotEquals(input, input2);
 	}
 
 	@Test
-	public void testCompareWithDifferentId() throws MalformedURLException {
-		WebBrowserEditorInput input = new WebBrowserEditorInput(new URL(URL1),
-				0, ID1);
-		WebBrowserEditorInput input2 = new WebBrowserEditorInput(new URL(URL1),
-						0, ID2);
+	public void testCompareWithDifferentId() throws MalformedURLException, URISyntaxException {
+		WebBrowserEditorInput input = new WebBrowserEditorInput(new URI(URL1).toURL(), 0, ID1);
+		WebBrowserEditorInput input2 = new WebBrowserEditorInput(new URI(URL1).toURL(), 0, ID2);
 		assertNotEquals(input, input2);
 	}
 
 	@Test
-	public void testCompareWithDifferentStyle() throws MalformedURLException {
-		WebBrowserEditorInput input = new WebBrowserEditorInput(new URL(URL1),
-				0, ID1);
-		WebBrowserEditorInput input2 = new WebBrowserEditorInput(new URL(URL1),
-						1, ID1);
+	public void testCompareWithDifferentStyle() throws MalformedURLException, URISyntaxException {
+		WebBrowserEditorInput input = new WebBrowserEditorInput(new URI(URL1).toURL(), 0, ID1);
+		WebBrowserEditorInput input2 = new WebBrowserEditorInput(new URI(URL1).toURL(), 1, ID1);
 		assertEquals(input, input2);
 		assertEquals(input.hashCode(), input2.hashCode());
 	}
 
 	@Test
-	public void testCompareWithStatusbarVisible() throws MalformedURLException {
-		WebBrowserEditorInput input = new WebBrowserEditorInput(new URL(URL1),
-				0, ID1);
-		WebBrowserEditorInput input2 = new WebBrowserEditorInput(new URL(URL1),
-				IWorkbenchBrowserSupport.STATUS, ID1);
+	public void testCompareWithStatusbarVisible() throws MalformedURLException, URISyntaxException {
+		WebBrowserEditorInput input = new WebBrowserEditorInput(new URI(URL1).toURL(), 0, ID1);
+		WebBrowserEditorInput input2 = new WebBrowserEditorInput(new URI(URL1).toURL(), IWorkbenchBrowserSupport.STATUS,
+				ID1);
 		assertNotEquals(input, input2);
 	}
 
@@ -110,8 +98,8 @@ public class TestInput {
 	}
 
 	@Test
-	public void testHashWithNullID() throws MalformedURLException {
-		WebBrowserEditorInput input = new WebBrowserEditorInput(new URL(URL1),0, null);
+	public void testHashWithNullID() throws MalformedURLException, URISyntaxException {
+		WebBrowserEditorInput input = new WebBrowserEditorInput(new URI(URL1).toURL(), 0, null);
 		input.hashCode();  // Fails if exception thrown
 	}
 
